Removed old converter. Minor stylistic tweaks.

--- a/benchmark/datasets/Makefile
+++ b/benchmark/datasets/Makefile
@@ -1,10 +1,9 @@
-all: snap-convert snap-revert mst-convert mst-convert-old
+all: snap-convert snap-revert mst-convert
 
 clean:
 	rm -f snap-convert
 	rm -f snap-revert
 	rm -f mst-convert
-	rm -f mst-convert-old
 
 snap-convert: snap-convert.cpp
 	g++ -Wall snap-convert.cpp -o snap-convert
@@ -14,6 +13,3 @@ snap-revert: snap-revert.cpp
 
 mst-convert: mst-convert.cpp
 	g++ -Wall mst-convert.cpp -o mst-convert
-
-mst-convert-old: mst-convert-old.cpp
-	g++ -std=c++0x -Wall mst-convert-old.cpp -o mst-convert-old
